Fix block alignment controls and clean up a bit.

--- a/src/bulb-tf/styles/style.scss
+++ b/src/bulb-tf/styles/style.scss
@@ -5,13 +5,17 @@
     padding: 1rem;
 
     h2 {
-        color: $black;
+        color: $dark;
         font-size: 2rem;
         margin: 1rem 0;
     }
 
     p {
         font-size: 1.4rem;
+    }
+
+    li {
+        list-style-position: inside;
     }
 
 }
